syntax = "proto3";
package net.pb;

option go_package = "/;net_pb";

// Log represents a thread log.
message Document {
    // ID of the document.
    bytes docID = 1;
    // head of the log.
    bytes head = 4;

    // Record is a thread record containing link data.
    message Log {
        // block is the top-level node's raw data as an ipld.Block.
        bytes block = 1;
    }
}

message GetDocGraphRequest {}

message GetDocGraphReply {}

message PushDocGraphRequest {}

message PushDocGraphReply {}

message GetLogRequest {}

message GetLogReply {}

message PushLogRequest {
    Body body = 1;

    message Body {
        // docID is the DocID of the document that is affected by the log.
        bytes docID = 1;
        // cid is the CID of the composite of the document.
        bytes cid = 2;
        // schemaID is the SchemaID of the collection that the document resides in.
        bytes schemaID = 3;
        // creator is the PeerID of the peer that created the log.
        string creator = 4;
        // log hold the block that represent version of the document.
        Document.Log log = 6;
    }
}

message GetHeadLogRequest {}

message PushLogReply {}

message GetHeadLogReply {}

// Service is the peer-to-peer network API for document sync
service Service {
    // GetDocGraph from this peer.
    rpc GetDocGraph(GetDocGraphRequest) returns (GetDocGraphReply) {}
    // PushDocGraph to this peer.
    rpc PushDocGraph(PushDocGraphRequest) returns (PushDocGraphReply) {}
    // GetLog from this peer.
    rpc GetLog(GetLogRequest) returns (GetLogReply) {}
    // PushLog to this peer.
    rpc PushLog(PushLogRequest) returns (PushLogReply) {}
    // GetHeadLog from this peer
    rpc GetHeadLog(GetHeadLogRequest) returns (GetHeadLogReply) {}
}
